--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "01-npm",
+  "name": "03-events",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC"
 }
